[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "submodules"]

[project]
name = "SR-Project"
authors = [{name = "Kirill Tamogashev", email = "Kirill.Tamogashev@skoltech.ru"}]
description = "Package for for testing various models on a Weather Super Resolution Dataset"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[project.scripts]
my-script = "src.unet.train:main"