[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "submodules"]

[project]
name = "SR-Project"
authors = [{name = "Kirill Tamogashev", email = "Kirill.Tamogashev@skoltech.ru"}]
description = "Package for for testing various models on a Weather Super Resolution Dataset"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[project.scripts]
my-script = [
    # UNet scripts
    "src.unet.train:main",
    "src.unet.eval:main",

    # NOT Scripts
    "src.neural_ot.not_train:main",
    "src.neural_ot.eval:main",

    # Pix2Pix GAN scripts
    "src.pix2pix.train:main",
    "src.pix2pix.eval:main",

    # SR3 Diffusion scripts
    "src.sr_ddpm.train:main",
    "src.sr_ddpm.eval:main",
]