[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "submodules"]

[project]
name = "SR-Project"
authors = [{name = "Kirill Tamogashev", email = "Kirill.Tamogashev@skoltech.ru"}]
description = "Package for for testing various models on a Weather Super Resolution Dataset"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[project.scripts]
# UNet scripts
unet_train="src.unet.train:main"
unet_eval="src.unet.eval:main"

# NOT Scripts
not_train="src.neural_ot.not_train:main"
not_eval="src.neural_ot.eval:main"

# Pix2Pix GAN scripts
pix2pix_train="src.pix2pix.train:main"
pix2pix_eval="src.pix2pix.eval:main"

# SR3 Diffusion scripts
ddpm_sr3_train="src.sr_ddpm.train:main"
ddpm_sr3_eval="src.sr_ddpm.eval:main"
